--- a/hierros.html
+++ b/hierros.html
@@ -2,10 +2,12 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<link href="css\styleshierros.css" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="ecommerce\css\style.css">
+		<script src="https://kit.fontawesome.com/0cb2d9cf91.js"></script>
+
 		<title>The Golf Shop-Hierros</title>
 	</head>
 
@@ -13,19 +15,23 @@
 		<header class="golfshop">
 			<a href="index.html" class="volver"><img src="img/shopgolf.png" alt=""></a>
 
-			<div class="redes">
-				<i class="fab fa-2x fa-facebook" style="color:#18EB8E"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<i class="fab fa-2x fa-twitter" style="color:#18EB8E"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<i class="fab fa-2x fa-instagram" style="color:#18EB8E"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<div class = "container">
+				<div class="redes">
+					<i class="fab fa-2x fa-facebook" style="color:#18EB8E"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<i class="fab fa-2x fa-twitter" style="color:#18EB8E"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<i class="fab fa-2x fa-instagram" style="color:#18EB8E"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				</div>
 			</div>
 
-				<div class="container">
+				<div class="containerbarra">
 					<form class="form-inline my-2 my-lg-0">
 						<input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Buscar">
 						<button class="btn btn-outline-success gr-22 gr-sm-22" type="submit">Buscar</button>
 					</form>
 				</div>
-			<h1 id="Titulo">HIERROS</h1>
+					<div class = "containertitulo">
+						<h1>H I E R R O S</h1>
+					</div>
 		</header>
 
 		<div class="container">
