--- a/hierros.html
+++ b/hierros.html
@@ -13,6 +13,54 @@
 
 	<body>
 		<header class="golfshop">
+			<img src="img/shopgolf.png" alt="logotipo" class="logo">
+
+		<!-- cabecera -->
+		<div class="redes">
+			<i class="fab fa-2x fa-facebook" style="color:#18EB8E"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<i class="fab fa-2x fa-twitter" style="color:#18EB8E"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<i class="fab fa-2x fa-instagram" style="color:#18EB8E"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		</div>
+
+		<div class="container">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+				<a class="navbar-brand" href="index.html">The Golf Shop</a>
+						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav mr-auto">
+						<!--<li class="nav-item active">
+							<a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+						</li>-->
+						<li class="nav-item">
+							<a class="nav-link" href="academia.html">Nuestra Escuela</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								Nuestros Articulos
+							</a>
+									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+										<a class="dropdown-item" href="index.html">Drivers</a>
+										<a class="dropdown-item" href="hierros.html">Hierros</a>
+										<a class="dropdown-item" href="putter.html">Putters</a>
+										<div class="dropdown-divider"></div>
+										<a class="dropdown-item" href="accesorios.html">Accesorios</a>
+									</div>
+										</li>
+											<li class="nav-item">
+												<!--<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
+											</li>
+					</ul>
+												<form class="form-inline my-2 my-lg-0">
+													<input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Buscar">
+													<button class="btn btn-outline-success gr-22 gr-sm-22" type="submit">Buscar</button>
+												</form>
+											</div>
+														<a href="carrito.html" class="volver"><i class="fas fa-2x fa-shopping-cart" style="color:#18EB8E ";></i></a>
+				</nav>
+		<!--<header class="golfshop">
 			<a href="index.html" class="volver"><img src="img/shopgolf.png" alt=""></a>
 
 			<div class = "container">
@@ -32,10 +80,12 @@
 				</div>
 			</div>
 					<div class = "container">
-						<div class="titulo">
-							<h1>H I E R R O S</h1>
+						<div class="titulo">-->
+						<div class="container">
+							<div class="titulo">
+								<h1>H I E R R O S</h1>
+							</div>
 						</div>
-				</div>
 		</header>
 
 		<div class="container">
