--- a/putter.html
+++ b/putter.html
@@ -3,99 +3,132 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-				<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-				<link rel="stylesheet" href="css/style.css">
-
-		<title>The Golf Shop</title>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<link rel="stylesheet" href="css/stylesputters.css">
 		<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat&display=swap" rel="stylesheet">
+		<title>The Golf Shop-Putters</title>
 	</head>
-	<body>
-		<header class="golfshop">
-<a href="index.html" class="volver"><img src="img/shopgolf.png" alt=""></a>
-	<div class="container">
 
-		<!-- boton buscar -->
+		<body>
+			<header class="golfshop">
+				<img src="img/shopgolf.png" alt="logotipo" class="logo">
 
+			<div class="redes">
+				<i class="fab fa-2x fa-facebook" style="color:#18EB8E"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<i class="fab fa-2x fa-twitter" style="color:#18EB8E"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<i class="fab fa-2x fa-instagram" style="color:#18EB8E"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			</div>
 
-	<form class="form-inline my-2 my-lg-0">
-		<input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Buscar">
-		<button class="btn btn-outline-success gr-22 gr-sm-22" type="submit">Buscar</button>
-	</form>
-</div>
-<h1 id="Titulo">
-  PUTTERS
-</h1>
-	</header>
+			<div class="container">
+				<nav class="navbar navbar-expand-lg navbar-light bg-light">
+					<a class="navbar-brand" href="index.html">The Golf Shop</a>
+							<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+								<span class="navbar-toggler-icon"></span>
+							</button>
 
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<ul class="navbar-nav mr-auto">
+							<li class="nav-item">
+								<a class="nav-link" href="academia.html">Nuestra Escuela</a>
+							</li>
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+									Nuestros Articulos
+								</a>
+										<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+											<a class="dropdown-item" href="index.html">Drivers</a>
+											<a class="dropdown-item" href="hierros.html">Hierros</a>
+											<a class="dropdown-item" href="putter.html">Putters</a>
+											<div class="dropdown-divider"></div>
+											<a class="dropdown-item" href="accesorios.html">Accesorios</a>
+										</div>
+											</li>
+												<li class="nav-item">
+													<!--<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
+												</li>
+						</ul>
+													<form class="form-inline my-2 my-lg-0">
+														<input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Buscar">
+														<button class="btn btn-outline-success gr-22 gr-sm-22" type="submit">Buscar</button>
+													</form>
+												</div>
+															<a href="carrito.html" class="volver"><i class="fas fa-2x fa-shopping-cart" style="color:#18EB8E ";></i></a>
+					</nav>
 
+					<div class="container">
+						<div class="titulo">
+							<h1>P U T T E R S</h1>
+						</div>
+					</div>
 
-<!--/==========================PRIMERA CARTA===============================-->
-<div class="card" style="width: 18rem;">
-  <img src="img/putteroddy.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">ODDYSSEY</h5>
-    <p class="card-text">Consulte por modelos y varas</p>
-    <a href="#" class="btn btn-success">COMPRAR</a>
-  </div>
-</div>
+					<!--/==========================PRIMERA CARTA===============================-->
+				<div class="container">
+					<div class="card" style="width: 18rem;">
+					  <img src="img/putteroddy.jpg" class="card-img-top" alt="...">
+					  <div class="card-body">
+					    <h5 class="card-title">ODDYSSEY</h5>
+					    <p class="card-text">Consulte por modelos y varas</p>
+					    <a href="#" class="btn btn-success">COMPRAR</a>
+					  </div>
+					</div>
 
-<!--/==========================PRIMERA CARTA===============================-->
-<div class="card" style="width: 18rem;">
-  <img src="img/putterody.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">ODDYSSEY</h5>
-    <p class="card-text">Consulte por modelos y varas</p>
-    <a href="#" class="btn btn-success">COMPRAR</a>
-  </div>
-</div>
+					<!--/==========================PRIMERA CARTA===============================-->
+					<div class="card" style="width: 18rem;">
+					  <img src="img/putterody.jpg" class="card-img-top" alt="...">
+					  <div class="card-body">
+					    <h5 class="card-title">ODDYSSEY</h5>
+					    <p class="card-text">Consulte por modelos y varas</p>
+					    <a href="#" class="btn btn-success">COMPRAR</a>
+					  </div>
+					</div>
 
-<!--/==========================PRIMERA CARTA===============================-->
-<div class="card" style="width: 18rem;">
-  <img src="img/putterping.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">PING</h5>
-    <p class="card-text">Consulte por modelos y varas</p>
-    <a href="#" class="btn btn-success">COMPRAR</a>
-  </div>
-</div>
+					<!--/==========================PRIMERA CARTA===============================-->
+					<div class="card" style="width: 18rem;">
+					  <img src="img/putterping.jpg" class="card-img-top" alt="...">
+					  <div class="card-body">
+					    <h5 class="card-title">PING</h5>
+					    <p class="card-text">Consulte por modelos y varas</p>
+					    <a href="#" class="btn btn-success">COMPRAR</a>
+					  </div>
+					</div>
 
-<!--/==========================SEGUNDA CARTA===============================-->
-	<div class="card" style="width: 18rem;">
-	  <img src="img/putterpings.jpg" class="card-img-top" alt="...">
-	  <div class="card-body">
-	    <h5 class="card-title">PING</h5>
-	    <p class="card-text">Tenemos la vara para usted</p>
-	    <a href="#" class="btn btn-success">COMPRAR</a>
-	  </div>
-</div>
-<!--/==========================TERCERA CARTA===============================-->
-	<div class="card" style="width: 18rem;">
-	<img src="img/puttertay.jpg" class="card-img-top" alt="...">
-	<div class="card-body">
-		<h5 class="card-title">TAYLOR MADE M6</h5>
-		<p class="card-text">Ultimo modelo!</p>
-		<a href="#" class="btn btn-success">COMPRAR</a>
-	</div>
-</div>
+					<!--/==========================SEGUNDA CARTA===============================-->
+						<div class="card" style="width: 18rem;">
+						  <img src="img/putterpings.jpg" class="card-img-top" alt="...">
+						  <div class="card-body">
+						    <h5 class="card-title">PING</h5>
+						    <p class="card-text">Tenemos la vara para usted</p>
+						    <a href="#" class="btn btn-success">COMPRAR</a>
+						  </div>
+					</div>
+					<!--/==========================TERCERA CARTA===============================-->
+						<div class="card" style="width: 18rem;">
+						<img src="img/puttertay.jpg" class="card-img-top" alt="...">
+						<div class="card-body">
+							<h5 class="card-title">TAYLOR MADE M6</h5>
+							<p class="card-text">Ultimo modelo!</p>
+							<a href="#" class="btn btn-success">COMPRAR</a>
+						</div>
+					</div>
+				</div>
 
+					<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+					<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+					<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+		</body>
 
+		<footer>
+			<img src="img/academia_anto.png" alt="" class="academia"> <!--<style="width:10% height:10%">-->
 
-<footer>
-	<img src="/Applications/MAMP/htdocs/PROYECTOS/ecommerce/img/LOGO ACADEMIA.jpg" alt="" class="academia">
-	<img src="img/academia_anto.png" alt="" class="academia" style="width:30%";>
+			<style>a {text-decoration: none;} </style>
+				<ul class="sinvineta1">
+					<li><a href="index.html" style="color:#CFCBCB;">Home</a></li>
+					<br>
+					<li><a href="preguntas.html" style="color:#CFCBCB;">Preguntas Frecuentes</a></li>
+					<li><a href="formulario.html" style="color:#CFCBCB;">Formulario de Registro</a></li>
+					<li><a href="contacto.html" style="color:#CFCBCB;">Contacto</a></li>
+				</ul>
+		</footer>
 
-	<style>a {text-decoration: none;} </style>
-		<ul class="sinvineta1">
-			<li><a href="index.html" style="color:#CFCBCB;">Home</a></li>
-			<br>
-			<li><a href="preguntas.html" style="color:#CFCBCB;">Preguntas Frecuentes</a></li>
-			<li><a href="formulario.html" style="color:#CFCBCB;">Formulario de Registro</a></li>
-			<li><a href="contacto.html" style="color:#CFCBCB;">Contacto</a></li>
-		</ul>
-</footer>
-
-
-
-</body>
 </html>
